--- a/style.css
+++ b/style.css
@@ -78,11 +78,7 @@ hr {
 	color: #ffffff;
 }
 
-.inp:hover{
+/* .inp:hover{
 	background-color: #ee7678;
 	color: #ffffff;
-}
-
-.capivarias {
-	color: #ffffff;
-}
+} */
